--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -2,30 +2,30 @@
 # DOMESTIC OFFERS
 ################################################################################
 
-- title: Supersentral beliggenhet i Oslo
-  id: supersentral-beliggenhet-i-oslo
-  location: First Hotel Grims Grenka, Oslo, Norge
-  description: Firestjerners designhotell som utmerker seg med unik skandinavisk design og supersentral beliggenhet
-  price: 1395
+- title: Lad batteriene på Norefjell
+  id: lad-batteriene-på-norefjell
+  location: Norefjell Ski & Spa, Norefjell, Buskerud, Norge
+  description: Prisvinnende spahotell i naturskjønne omgivelser, inkludert frokost, matrabatt og ekstragoder
+  price: 1350
   price-description: per rom per natt
-  saved: 37
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/10585/0eaf785a_d63d_41b5_b063_24d161b46e66.jpg
-  link: https://no.secretescapes.com/supersentral-beliggenhet-i-oslo-first-hotel-grims-grenka-oslo-norge/sale
-  sale-id: 93678
+  saved: 47
+  expires: 2019/06/04
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/32900/e982c4f8_7e71_4ad4_95de_bcf5411485b4.jpg
+  link: https://no.secretescapes.com/lad-batteriene-paa-norefjell-norefjell-ski-and-spa-norefjell-buskerud-norge-no-no/sale
+  sale-id: 94610
   domestic: true
 
-- title: Sjarmerende og sentralt i Oslo
-  id: sjarmerende-og-sentralt-i-oslo
-  location: Clarion Collection Savoy, Oslo
-  description: Med Slottet og Stortinget som naboer
-  price: 1038
+- title: Sjarmerende hotell på Frogner
+  id: sjarmerende-hotell-på-frogner
+  location: Clarion Collection Hotel Gabelshus, Oslo
+  description: Elegant hotell i rolig gate på Frogner, inkludert frokostbuffet og kveldsmat
+  price: 994
   price-description: per rom per natt
-  saved: 30
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94237/becab491_5ad1_4ec0_b77a_b2d08f76e01d.jpg
-  link: https://no.secretescapes.com/sjarmerende-og-sentralt-i-oslo-clarion-collection-savoy-oslo/sale
-  sale-id: 94237
+  saved: 38
+  expires: 2019/06/04
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/48751/11007c33_f05a_46d9_bcef_971128507c1c.jpg
+  link: https://no.secretescapes.com/sjarmerende-hotell-paa-frogner-clarion-collection-hotel-gabelshus-oslo-no/sale
+  sale-id: 94714
   domestic: true
 
 ################################################################################
@@ -43,19 +43,6 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/80443/034d45dd_5a42_4ee6_8f8e_5e4d58dce66a.jpg
   link: https://no.secretescapes.com/unikt-hotell-med-magiske-rom-chateau-monfort-milano-italia-no6/sale
   sale-id: 93672
-  domestic: false
-
-- title: Komplett spaopplevelse i Sverige
-  id: komplett-spaopplevelse-i-sverige
-  location: Vann Spa Hotell & Konferens, Brastad, Sverige
-  description: Firestjerners spahotell ved idylliske Gullmarsfjord, inkl. halvpensjon og adgang til spa
-  price: 1453
-  price-description: per rom per natt
-  saved: 32
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86348/23555bdf_3d75_4cdf_8695_8385008f2aae.jpg
-  link: https://no.secretescapes.com/komplett-spaopplevelse-i-sverige-vann-spa-hotell-and-konferens-brastad-sverige-1/sale
-  sale-id: 93127
   domestic: false
 
 - title: Eksklusivt boutiquehotell i Portal Nous
@@ -78,23 +65,10 @@
   price: 1083
   price-description: per rom per natt
   saved: 44
-  expires: 2019/05/28
+  expires: 2019/06/04
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/39416/5118d9d8_fe87_4eaf_bda2_9969e25f0ea5.jpg
   link: https://no.secretescapes.com/aktiv-ferie-paa-fjellet-i-sverige-holiday-club-are-are-sverige-no/sale
   sale-id: 94093
-  domestic: false
-
-- title: Skjærgårdshotell i Stockholm
-  id: skjærgårdshotell-i-stockholm
-  location: Elite Hotel Marina Tower, Stockholm, Sverige
-  description: Luksusopphold midt i krysningen av by og skjærgård, inkludert frokost
-  price: 1079
-  price-description: per rom per natt
-  saved: 23
-  expires: 2019/05/28
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/11062/49294441_dab6_497f_b3e1_69397122793a.jpg
-  link: https://no.secretescapes.com/skjaergaardshotell-i-stockholm-elite-hotel-marina-tower-stockholm-sverige-no3/sale
-  sale-id: 94102
   domestic: false
 
 - title: Strandnært med spa på Sardinia
@@ -108,4 +82,43 @@
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73726/960100d5_f0ce_4382_96ff_20b561324f90.jpg
   link: https://no.secretescapes.com/strandnaert-med-spa-paa-sardinia-arbatax-park-resort-suites-del-mare-arbatax-sardinia-italia-no/sale
   sale-id: 94519
+  domestic: false
+
+- title: Femstjerners luksus på Mallorca
+  id: femstjerners-luksus-på-mallorca
+  location: GPRO Valparaiso Palace & Spa, Palma de Mallorca, Spania
+  description: Luksuriøst opphold på urbant sparesort i Palma, inkludert frokost&nbsp;
+  price: 1451
+  price-description: per rom per natt
+  saved: 49
+  expires: 2019/06/04
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg
+  link: https://no.secretescapes.com/femstjerners-luksus-paa-mallorca-gpro-valparaiso-palace-and-spa-palma-de-mallorca-spania2/sale
+  sale-id: 95067
+  domestic: false
+
+- title: Luksuriøst golfresort i tidligere kloster
+  id: luksuriøst-golfresort-i-tidligere-kloster
+  location: I Monasteri Golf Resort, Siracusa, Sicilia, Italia
+  description: Hotell i et sjarmerende tidligere kloster med historisk atmosfære og landlig luksus
+  price: 1023
+  price-description: per rom per natt
+  saved: 61
+  expires: 2019/06/04
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/65890/b4f2cf0a_f6ea_4661_9173_bd8f2b4267ea.jpg
+  link: https://no.secretescapes.com/luksurioest-golfresort-i-tidligere-kloster-i-monasteri-golf-resort-siracusa-sicilia-italia-1/sale
+  sale-id: 95177
+  domestic: false
+
+- title: Elegant boutiquehotell i Fitzrovia
+  id: elegant-boutiquehotell-i-fitzrovia
+  location: The Mandrake, London, England
+  description: Essensen av britisk eleganse i sofistikert nabolag i hjertet av London, inkludert frokost
+  price: 2418
+  price-description: per rom per natt
+  saved: 57
+  expires: 2019/06/05
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74357/192483b6_5605_429d_9363_db368ad4dc60.jpg
+  link: https://no.secretescapes.com/fantastiske-fitzrovia-the-mandrake-london-england-1/sale
+  sale-id: 94946
   domestic: false
